--- a/source/photo/index.html
+++ b/source/photo/index.html
@@ -75,7 +75,7 @@ layout: false
     <div class="headband"></div>
 
     <header id="header" class="header" itemscope itemtype="http://schema.org/WPHeader">
-        <a href="https://github.com/sunshine940326"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
+        <a href="https://github.com/sunshine940326"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/c6286ade715e9bea433b4705870de482a654f78a/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png"></a>
         <div class="header-inner"><div class="site-brand-wrapper">
             <div class="site-meta ">
                 <div class="custom-logo-site-title">
@@ -527,133 +527,252 @@ layout: false
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(bp, s);
     })();
-    function Star(id, x, y){
-        this.id = id;
-        this.x = x;
-        this.y = y;
-        this.r = Math.floor(Math.random()*2)+1;
-        var alpha = (Math.floor(Math.random()*10)+1)/10/2;
-        this.color = "rgba(255,255,255,"+alpha+")";
-    }
-
-    Star.prototype.draw = function() {
-        ctx.fillStyle = this.color;
-        ctx.shadowBlur = this.r * 2;
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false);
-        ctx.closePath();
-        ctx.fill();
-    }
-
-    Star.prototype.move = function() {
-        this.y -= .15;
-        if (this.y <= -10) this.y = HEIGHT + 10;
-        this.draw();
-    }
-
-    Star.prototype.die = function() {
-        stars[this.id] = null;
-        delete stars[this.id];
-    }
-
-
-    function Dot(id, x, y, r) {
-        this.id = id;
-        this.x = x;
-        this.y = y;
-        this.r = Math.floor(Math.random()*5)+1;
-        this.maxLinks = 2;
-        this.speed = .5;
-        this.a = .5;
-        this.aReduction = .005;
-        this.color = "rgba(255,255,255,"+this.a+")";
-        this.linkColor = "rgba(255,255,255,"+this.a/4+")";
-
-        this.dir = Math.floor(Math.random()*140)+200;
-    }
-
-    Dot.prototype.draw = function() {
-        ctx.fillStyle = this.color;
-        ctx.shadowBlur = this.r * 2;
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false);
-        ctx.closePath();
-        ctx.fill();
-    }
-
-    Dot.prototype.link = function() {
-        if (this.id == 0) return;
-        var previousDot1 = getPreviousDot(this.id, 1);
-        var previousDot2 = getPreviousDot(this.id, 2);
-        var previousDot3 = getPreviousDot(this.id, 3);
-        if (!previousDot1) return;
-        ctx.strokeStyle = this.linkColor;
-        ctx.moveTo(previousDot1.x, previousDot1.y);
-        ctx.beginPath();
-        ctx.lineTo(this.x, this.y);
-        if (previousDot2 != false) ctx.lineTo(previousDot2.x, previousDot2.y);
-        if (previousDot3 != false) ctx.lineTo(previousDot3.x, previousDot3.y);
-        ctx.stroke();
-        ctx.closePath();
-    }
-
-    function getPreviousDot(id, stepback) {
-        if (id == 0 || id - stepback < 0) return false;
-        if (typeof dots[id - stepback] != "undefined") return dots[id - stepback];
-        else return false;//getPreviousDot(id - stepback);
-    }
-
-    Dot.prototype.move = function() {
-        this.a -= this.aReduction;
-        if (this.a <= 0) {
-            this.die();
-            return
-        }
-        this.color = "rgba(255,255,255,"+this.a+")";
-        this.linkColor = "rgba(255,255,255,"+this.a/4+")";
-        this.x = this.x + Math.cos(degToRad(this.dir))*this.speed,
-            this.y = this.y + Math.sin(degToRad(this.dir))*this.speed;
-
-        this.draw();
-        this.link();
-    }
-
-    Dot.prototype.die = function() {
-        dots[this.id] = null;
-        delete dots[this.id];
-    }
-
-
-    var canvas  = document.getElementById('canvas'),
+    var stars = [],
+        star_r = 3,
+        star_alpha = 5,
+        initStarsPopulation = 150,
+        move_distance = 0.25,
+        dots = [],
+        dot_r = 5,
+        dot_speeds = 0.5,
+        dot_alpha = 0.5,
+        dot_aReduction = 0.01,
+        dotsMinDist = 5,
+        maxDistFromCursor = 50,
+        canvas = document.getElementById('canvas'),
         ctx = canvas.getContext('2d'),
         WIDTH,
         HEIGHT,
         mouseMoving = false,
         mouseMoveChecker,
         mouseX,
-        mouseY,
-        stars = [],
-        initStarsPopulation = 80,
-        dots = [],
-        dotsMinDist = 2,
-        maxDistFromCursor = 50;
+        mouseY;
+    /*设置单个star
+     * @param id：id
+     * @param x：x坐标
+     * @param y：y坐标
+     * */
+    function Star(id, x, y, useCache) {
+        this.id = id;
+        this.x = x;
+        this.y = y;
+        this.useCacha = useCache;
+        this.cacheCanvas = document.createElement("canvas");
+        this.cacheCtx = this.cacheCanvas.getContext("2d");
+        this.r = Math.floor(Math.random() * star_r) + 1;
+        this.cacheCtx.width = 6 * this.r;
+        this.cacheCtx.height = 6 * this.r;
+        var alpha = ( Math.floor(Math.random() * 10) + 1) / star_alpha;
+        this.color = "rgba(255,255,255," + alpha + ")";
+        if (useCache) {
+            this.cache()
+        }
+    }
 
-    setCanvasSize();
-    init();
+    Star.prototype = {
+        draw : function () {
+            if (!this.useCacha) {
+                ctx.save();
+                ctx.fillStyle = this.color;
+                ctx.shadowBlur = this.r * 2;
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false);
+                ctx.closePath();
+                ctx.fill();
+                ctx.restore();
+            } else {
+                ctx.drawImage(this.cacheCanvas, this.x - this.r, this.y - this.r);
+            }
+        },
+
+        cache : function () {
+            this.cacheCtx.save();
+            this.cacheCtx.fillStyle = this.color;
+            this.cacheCtx.shadowColor = "white";
+            this.cacheCtx.shadowBlur = this.r * 2;
+            this.cacheCtx.beginPath();
+            this.cacheCtx.arc(this.r * 3, this.r * 3, this.r, 0, 2 * Math.PI);
+            this.cacheCtx.closePath();
+            this.cacheCtx.fill();
+            this.cacheCtx.restore();
+        },
+
+        move : function () {
+            this.y -= move_distance;
+            if (this.y <= -10) {
+                this.y += HEIGHT + 10;
+            }
+            this.draw();
+        },
+
+        die : function () {
+            stars[this.id] = null;
+            delete stars[this.id]
+        }
+    };
+
+    function Dot(id, x, y, useCache) {
+        this.id = id;
+        this.x = x;
+        this.y = y;
+        this.r = Math.floor(Math.random() * dot_r)+1;
+        this.speed = dot_speeds;
+        this.a = dot_alpha;
+        this.aReduction = dot_aReduction;
+        this.useCache = useCache;
+        this.dotCanvas = document.createElement("canvas");
+        this.dotCtx = this.dotCanvas.getContext("2d");
+        this.dotCtx.width = 6 * this.r;
+        this.dotCtx.height = 6 * this.r;
+        this.dotCtx.a = 0.5;
+        this.color = "rgba(255,255,255," + this.a +")";
+        this.dotCtx.color = "rgba(255,255,255," + this.dotCtx.a + ")";
+        this.linkColor = "rgba(255,255,255," + this.a/4 + ")";
+        this.dir = Math.floor(Math.random()*140)+200;
+
+        if( useCache){
+            this.cache()
+        }
+    }
+
+    Dot.prototype = {
+        draw : function () {
+            if( !this.useCache){
+                ctx.save();
+                ctx.fillStyle = this.color;
+                ctx.shadowColor = "white";
+                ctx.shadowBlur = this.r * 2;
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false);
+                ctx.closePath();
+                ctx.fill();
+                ctx.restore();
+            }else{
+                ctx.drawImage(this.dotCanvas, this.x - this.r * 3, this.y - this.r *3);
+
+            }
+        },
+
+        cache : function () {
+            this.dotCtx.save();
+            this.dotCtx.a  -= this.aReduction;
+            this.dotCtx.color = "rgba(255,255,255," + this.dotCtx.a + ")";
+            this.dotCtx.fillStyle = this.dotCtx.color;
+            this.dotCtx.shadowColor = "white";
+            this.dotCtx.shadowBlur = this.r * 2;
+            this.dotCtx.beginPath();
+            this.dotCtx.arc(this.r * 3, this.r * 3, this.r, 0, 2 * Math.PI, false);
+            this.dotCtx.closePath();
+            this.dotCtx.fill();
+            this.dotCtx.restore();
+        },
+        link : function () {
+            if (this.id == 0) return;
+            var previousDot1 = getPreviousDot(this.id, 1);
+            var previousDot2 = getPreviousDot(this.id, 2);
+            var previousDot3 = getPreviousDot(this.id, 3);
+            var previousDot4 = getPreviousDot(this.id, 4);
+
+
+            if (!previousDot1) return;
+            ctx.strokeStyle = this.linkColor;
+            ctx.moveTo(previousDot1.x, previousDot1.y);
+            ctx.beginPath();
+            ctx.lineTo(this.x, this.y);
+            if (previousDot2 != false) ctx.lineTo(previousDot2.x, previousDot2.y);
+            if (previousDot3 != false) ctx.lineTo(previousDot3.x, previousDot3.y);
+            if (previousDot4 != false) ctx.lineTo(previousDot4.x, previousDot4.y);
+
+            ctx.stroke();
+            ctx.closePath();
+        },
+
+        move : function () {
+
+
+            this.a -= this.aReduction;
+            if(this.a <= 0 ){
+                this.die();
+                return
+            }
+            this.dotCtx.a  -= this.aReduction;
+            this.dotCtx.color = "rgba(255,255,255," + this.dotCtx.a + ")";
+            this.color = "rgba(255,255,255," + this.a + ")";
+            this.linkColor = "rgba(255,255,255," + this.a/4 + ")";
+            this.x = this.x + Math.cos(degToRad(this.dir)) * this.speed;
+            this.y = this.y + Math.sin(degToRad(this.dir)) * this.speed;
+
+            this.draw();
+            this.link();
+
+        },
+
+        die : function () {
+            dots[this.id] = null;
+            delete dots[this.id];
+        }
+    };
+    window.onmousemove = function (e) {
+        mouseMoving = true;
+        mouseX = e.clientX;
+        mouseY = e.clientY;
+        clearInterval(mouseMoveChecker);
+        mouseMoveChecker = setInterval(function () {
+            mouseMoving = false
+        },1000)
+
+    };
+    function drawIfMouseMoving() {
+        if (!mouseMoving) return;
+
+        if (dots.length == 0) {
+            dots[0] = new Dot(0, mouseX, mouseY,true);
+            dots[0].draw();
+            return;
+        }
+
+        var previousDot = getPreviousDot(dots.length, 1);
+        var prevX = previousDot.x;
+        var prevY = previousDot.y;
+
+        var diffX = Math.abs(prevX - mouseX);
+        var diffY = Math.abs(prevY - mouseY);
+
+        if (diffX < dotsMinDist || diffY < dotsMinDist) return;
+
+        var xVariation = Math.random() > .5 ? -1 : 1;
+        xVariation = xVariation*Math.floor(Math.random()*maxDistFromCursor)+1;
+        var yVariation = Math.random() > .5 ? -1 : 1;
+        yVariation = yVariation*Math.floor(Math.random()*maxDistFromCursor)+1;
+        dots[dots.length] = new Dot(dots.length, mouseX+xVariation, mouseY+yVariation,true);
+        dots[dots.length-1].draw();
+        dots[dots.length-1].link();
+    }
+
+    function getPreviousDot(id, stepback) {
+        if(id == 0 || id - stepback < 0){
+            return false
+        }
+        if(typeof dots[id - stepback] !== "undefined"){
+            return dots[id - stepback]
+        }else{
+            return false
+        }
+    }
 
     function setCanvasSize() {
-        WIDTH = document.documentElement.clientWidth,
-            HEIGHT = document.documentElement.clientHeight;
-
+        WIDTH = document.documentElement.clientWidth;
+        HEIGHT = document.documentElement.clientHeight;
         canvas.setAttribute("width", WIDTH);
         canvas.setAttribute("height", HEIGHT);
+
     }
 
     function init() {
         ctx.strokeStyle = "white";
         ctx.shadowColor = "white";
         for (var i = 0; i < initStarsPopulation; i++) {
-            stars[i] = new Star(i, Math.floor(Math.random()*WIDTH), Math.floor(Math.random()*HEIGHT));
+            stars[i] = new Star(i, Math.floor(Math.random()*WIDTH), Math.floor(Math.random()*HEIGHT),true);
             //stars[i].draw();
         }
         ctx.shadowBlur = 0;
@@ -673,48 +792,13 @@ layout: false
         requestAnimationFrame(animate);
     }
 
-    window.onmousemove = function(e){
-        mouseMoving = true;
-        mouseX = e.clientX;
-        mouseY = e.clientY;
-        clearInterval(mouseMoveChecker);
-        mouseMoveChecker = setTimeout(function() {
-            mouseMoving = false;
-        }, 100);
-    }
-
-
-    function drawIfMouseMoving(){
-        if (!mouseMoving) return;
-
-        if (dots.length == 0) {
-            dots[0] = new Dot(0, mouseX, mouseY);
-            dots[0].draw();
-            return;
-        }
-
-        var previousDot = getPreviousDot(dots.length, 1);
-        var prevX = previousDot.x;
-        var prevY = previousDot.y;
-
-        var diffX = Math.abs(prevX - mouseX);
-        var diffY = Math.abs(prevY - mouseY);
-
-        if (diffX < dotsMinDist || diffY < dotsMinDist) return;
-
-        var xVariation = Math.random() > .5 ? -1 : 1;
-        xVariation = xVariation*Math.floor(Math.random()*maxDistFromCursor)+1;
-        var yVariation = Math.random() > .5 ? -1 : 1;
-        yVariation = yVariation*Math.floor(Math.random()*maxDistFromCursor)+1;
-        dots[dots.length] = new Dot(dots.length, mouseX+xVariation, mouseY+yVariation);
-        dots[dots.length-1].draw();
-        dots[dots.length-1].link();
-    }
-    //setInterval(drawIfMouseMoving, 17);
 
     function degToRad(deg) {
         return deg * (Math.PI / 180);
     }
+
+    setCanvasSize();
+    init();
 </script>
 </body>
 </html>
