--- a/source/photo/index2.html
+++ b/source/photo/index2.html
@@ -376,7 +376,7 @@ layout: false
 
   <script type="text/javascript" src="/js/src/motion.js?v=5.1.0"></script>
 
-  <script type="text/javascript" src="/js/src/canvasstar.js?v=5.1.0"></script>
+  <script type="text/javascript" src="/js/src/canvasline.js?v=5.1.0"></script>
 
   <script type="text/javascript" src="/js/src/baidu_tools.js?v=5.1.0"></script>
 
